--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header{
     flex-direction: row-reverse;
 }
 
-.container img{
+.container-reverse img{
     width: 30%;
     height: auto;
     margin-top: 34px;
