--- a/style.css
+++ b/style.css
@@ -23,7 +23,14 @@ header{
 }
 
 .container-reverse img{
-    width: 30%;
+    width: 25%;
     height: auto;
     margin-top: 34px;
+}
+
+.h2{
+    text-align: right;
+    width: 100%;
+    font-size: medium;
+    font-family: 'Sevillana';
 }
