--- a/style.css
+++ b/style.css
@@ -28,6 +28,11 @@ header{
     margin-top: 34px;
 }
 
+.texto{
+    width: 100%;
+    height: 100px;
+}
+
 .h2{
     text-align: right;
     width: 100%;
